[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mmprocess"
version = "2.3.3"
description = "Batch video transcoding system with intelligent quality/size optimization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Stephen P. Shoecraft"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
]
keywords = ["video", "transcoding", "ffmpeg", "batch", "encoding"]
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
mmprocess = "mmprocess.cli:main"
getstat = "mmprocess.getstat:main"
mmrun = "mmprocess.mmrun:main"

[project.urls]
Homepage = "https://github.com/sshoecraft/mmprocess"

[tool.setuptools.packages.find]
where = ["."]
include = ["mmprocess*"]
